Pabeigta funkcionalitāte. Pieliktas konstantes atbilžu u variantu skaitam.
Ieviestas konstantes jautājumu skaitam un atbilžu variantu skaitam. Rāda, kurā jautājumā lietotājs ir. Beigās rāda pareizo atbilžu skaitu.

--- a/stili.css
+++ b/stili.css
@@ -24,6 +24,14 @@ h1{
     margin-right: auto;
     margin-top: 20px;
  }
+ #rezultats {
+  width: 500px;
+  border: 15px solid darkred;
+  padding: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+}
 #atbilzu_var {
     width: 500px;
     border: 15px solid green;
