--- a/stili.css
+++ b/stili.css
@@ -3,9 +3,96 @@
 padding:0;
 }
 body{
-    background:#043645 url(images/bodybg.png) top repeat-x;
+    background:#043645 top repeat-x; //url(images/bodybg.png) 
     font-family:Verdana, Arial, sans-serif;
 }
+
+/* Full-width input fields */
+input[type=text], input[type=password] {
+    width: 85%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  /* .container {
+    padding: 16px;
+  } */
+  
+  span.psw {
+    float: right;
+    padding-top: 16px;
+  }
+  
+  /* The Modal (background) */
+  .modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    padding-top: 60px;
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+    border: 1px solid #888;
+    width: 50%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* Add Zoom Animation */
+  .animate {
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s
+  }
+  
+  @-webkit-keyframes animatezoom {
+    from {-webkit-transform: scale(0)} 
+    to {-webkit-transform: scale(1)}
+  }
+    
+  @keyframes animatezoom {
+    from {transform: scale(0)} 
+    to {transform: scale(1)}
+  }
+
+/* The Close Button (x) */
+.close {
+    position: absolute;
+    right: 25px;
+    top: 0;
+    color: #000;
+    font-size: 35px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: red;
+    cursor: pointer;
+  }
+
+#h2 {
+	color: #ffffff;
+	font-weight: bolder;
+	font-size: 24px;
+    font-style: italic;
+    float: right;
+    padding: 10% 10%;
+} 
+
 #header img{
     width:970px;
     height:140px;
@@ -105,9 +192,13 @@ body{
 	border-radius: 10px;
 	text-decoration: none;
     text-align: center;
+    margin: 8px 10px;
 	background-image: url("images/poga_h.png");
 	font-size: 14px;
-	font-weight: bolder;
+    font-weight: bolder;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .poga:hover
